<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="appName">Playlist maker</string>
    <string name="searchButton">Поиск</string>
    <string name="mediaLibraryButton">Медиатека</string>
    <string name="settingsButton">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="themeSwitch">Тёмная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="writeSupport">Написать в поддержку</string>
    <string name="userAgreement">Пользовательское соглашение</string>

    <string name="text_email">Отправить письмо...</string>
    <string name="share_app_text">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email">адрес_студента@domain.com</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yandex_praktikum_terms_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_nothing">Ничего не нашлось</string>
    <string name="retryButton">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="youSearch">Вы искали</string>
    <string name="Duration">Длительность:</string>
    <string name="Album">Альбом:</string>
    <string name="Year">Год:</string>
    <string name="Genre">Жанр:</string>
    <string name="country">Страна:</string>


</resources>