<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <LinearLayout
        style="@style/HeaderLinearLayoutStyle"
        android:layout_weight="1">

        <TextView
            style="@style/HeaderTextViewStyle"
            android:text="@string/appName"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="23"
    android:padding="@dimen/large_padding"
    android:orientation="vertical">

        <Button style="@style/MainPageButtonStyle"
            android:id="@+id/searchButton"
            android:text="@string/searchButton"
            app:icon="@drawable/search_icon" />

        <Button style="@style/MainPageButtonStyle"
            android:id="@+id/mediaLibraryButton"
            android:text="@string/mediaLibraryButton"
            app:icon="@drawable/music_icon" />

        <Button style="@style/MainPageButtonStyle"
            android:id="@+id/settingsButton"
            android:text="@string/settingsButton"
            app:icon="@drawable/settings_icon" />

    </LinearLayout>


</LinearLayout>
