<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/medium_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            android:backgroundTint="@color/white"
            android:textColor="@color/text_color"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconTint="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/medium_padding"
            android:gravity="left|center"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/primary_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="23"
        android:orientation="vertical"
        android:paddingTop="@dimen/large_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/large_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/themeSwitch"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondary_text_size" />

            <Switch
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="center|end" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/large_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/shareApp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center|end"
                app:srcCompat="@drawable/share" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/large_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/writeSupport"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center|end"
                app:srcCompat="@drawable/support" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/large_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/userAgreement"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondary_text_size" />

            <ImageView
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_gravity="center|end"
                app:srcCompat="@drawable/arrow" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>