<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/HeaderLinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                style="@style/HeaderButtonStyle" />

            <TextView
                style="@style/HeaderTextViewStyle" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <ImageView
                android:id="@+id/album_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="22sp"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintTop_toBottomOf="@id/album_cover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintTop_toBottomOf="@id/song_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/button_queue"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/queue_button"
                app:layout_constraintTop_toTopOf="@id/play_button"
                app:layout_constraintBottom_toBottomOf="@id/play_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/play_button" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="55dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/playbutton"
                app:layout_constraintTop_toBottomOf="@id/artist_name"
                app:layout_constraintStart_toEndOf="@id/button_queue"
                app:layout_constraintEnd_toStartOf="@id/button_favorite" />

            <ImageButton
                android:id="@+id/button_favorite"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/favorite_button"
                app:layout_constraintTop_toTopOf="@id/play_button"
                app:layout_constraintBottom_toBottomOf="@id/play_button"
                app:layout_constraintStart_toEndOf="@id/play_button"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/song_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:fontFamily="@font/ys_text_medium"
                android:textSize="14sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/play_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Значения слева -->
            <TextView
                android:id="@+id/label_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/Duration"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="@color/lightColor_GreyOnGrey"
                app:layout_constraintTop_toBottomOf="@id/song_progress"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/Album"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="@color/lightColor_GreyOnGrey"
                app:layout_constraintTop_toBottomOf="@id/label_duration"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/Year"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="@color/lightColor_GreyOnGrey"
                app:layout_constraintTop_toBottomOf="@id/label_album"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/Genre"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="@color/lightColor_GreyOnGrey"
                app:layout_constraintTop_toBottomOf="@id/label_year"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/country"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="@color/lightColor_GreyOnGrey"
                app:layout_constraintTop_toBottomOf="@id/label_genre"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Значения справа -->
            <TextView
                android:id="@+id/song_details_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/label_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_duration" />

            <TextView
                android:id="@+id/song_details_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/label_album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_album" />

            <TextView
                android:id="@+id/song_details_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/label_year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_year" />

            <TextView
                android:id="@+id/song_details_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/label_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_genre" />

            <TextView
                android:id="@+id/song_details_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textSize="13sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/label_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_country" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
